# archive-beachmat

./: DESCRIPTION  NAMESPACE  cleanup  configure  configure.ac
R/: getBestChunkDims.R  rechunkByMargins.R  setupHDF5Array.R  zzz.R
inst/: CITATION  NEWS.Rd
inst/testpkg/: DESCRIPTION  NAMESPACE
inst/testpkg/R/: input_testfun.R  output_testfun.R
inst/testpkg/src/: Makevars  Makevars.win  beachtest.h  init.cpp  template_infun.h  template_outfun.h  test_access.cpp  test_input.cpp  test_output.cpp
inst/testpkg/tests/testthat/: test-character.R  test-error.R  test-integer.R  test-logical.R  test-misc.R  test-numeric.R  test-sparse.R
man/: getBestChunkDims.Rd  pkgconfig.Rd  rechunkByMargins.Rd
src/: Csparse_matrix.h  Csparse_output.h  HDF5_matrix.h  HDF5_output.h  HDF5_utils.cpp  HDF5_utils.h  Input_matrix.h  Input_methods.h  LIN_matrix.h  LIN_methods.h  LIN_outfun.h  LIN_output.h  Makevars  Makevars.in  Makevars.win  Output_matrix.h  Output_methods.h  Psymm_matrix.h  Rle_matrix.h  Rle_methods.h  any_matrix.cpp  any_matrix.h  beachmat.h  beachmat.in  character_matrix.cpp  character_matrix.h  character_output.cpp  character_output.h  dense_matrix.h  find_chunks.cpp  functions.cpp  functions.h  init.cpp  input_matrix.h  input_methods.h  integer_matrix.cpp  integer_matrix.h  internals.h  lin_matrix.h  lin_methods.h  (+19 more)
tests/testthat/: test-bestdims.R  test-config.R  test-rechunk.R
vignettes/: beachmat.Rmd
